test/rules/single_criterion/annotations/not_contains_any/config.json
{
  "description": "Test single criteria rule (does not contain any of the annotations foo and bar)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "accept": [
    "deployments/annotations_foo_bar.yaml",
    "deployments/annotations_foo_rbar.yaml"
  ],
  "reject": [
    "deployments/normal.yaml",
    "deployments/annotations_rfoo_rbar.yaml"
  ]
}
