test/rules/single_criterion/annotations/not_contains_any/rule.json
{
    "rules": [
        {
            "category": "Kubernetes",
            "cfg_type": "user_created",
            "comment": "",
            "containers": [
                "containers"
            ],
            "criteria": [
                {
                    "name": "annotations",
                    "op": "notContainsAny",
                    "path": "annotations",
                    "value": "foo,bar"
                }
            ],
            "critical": false,
            "disable": false,
            "id": 1000,
            "rule_mode": "protect",
            "rule_type": "deny"
        }
    ]
}
